--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html> 
 <body> 
 
-<video width="400" controls>
+<video height="1280" width="720" controls>
   <source src="Stinger_Final.mp4" type="video/mp4">
   Your browser does not support HTML5 video.
 </video>
