Fixed structure of Repo

--- a/index.html
+++ b/index.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html> 
 <html> 
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Stinger-Race On</title>
+  <link rel="shortcut icon" href="images/car.ico" type="image/x-icon" />
+  <link rel="icon" href="images/car.ico" type="image/x-icon" />
+  <link type="text/css" rel="stylesheet" href="css/materialize.css" media="screen,projection" />
+</head>
 <body> 
 
-<video height="635" width="1350" controls>
-  <source src="Stinger_Final.mp4" type="video/mp4">
-  Your browser does not support HTML5 video.
-</video>
+<div class="container" style="text-align:center;">
+  <div id="title">
+    <h3 id="title-text" style="font-weight: 200;color: #2eadad;">Stinger</h3>
+  </div>
+  <br>
+  <div>
+    <video width="90%" controls>
+      <source src="videos/Stinger_Final.mp4" type="video/mp4">
+      Your browser does not support HTML5 video.
+    </video>
+  </div>
+</div> 
 </body> 
 </html>
